package br.unitins.topicos1.dto;

public record BoletoDTO(
                String codigo) {
}