package br.unitins.topicos1.dto;

public record PedidoDTO(
        Long idPagamento,
        Long idHardware) {
}