package br.unitins.topicos1.dto;

public record PixDTO(
                String chave) {
}