package org.acme.dto;

public record EstadoDTO(
                String nome,
                String sigla) {
}