package org.acme.dto;

public record FabricanteDTO(
        String nome,
        String website) {
}
