package org.acme.dto;

public record ItemPedidoDTO(
                Integer quantidade,
                float preco) {

}
