package org.acme.dto;

public record MunicipioDTO(
                String nome,
                Long idEstado) {
}