package org.acme.dto;

public record TelefoneDTO(
        String ddd,
        String numero) {
}